--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rollup/plugin-typescript": "^8.3.0",
     "@tsconfig/svelte": "^2.0.0",
     "dotenv": "^14.3.2",
+    "netlify-cli": "^8.14.1",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -26,6 +27,8 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@netlify/functions": "^0.11.0",
+    "@types/node": "^14.18.9",
     "sirv-cli": "^2.0.0"
   }
 }
