--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@netlify/functions": "^0.11.0",
     "@types/node": "^14.18.9",
+    "node-fetch": "^3.2.0",
     "sirv-cli": "^2.0.0"
   }
 }
