--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@rollup/plugin-typescript": "^8.3.0",
     "@tsconfig/svelte": "^2.0.0",
     "dotenv": "^14.3.2",
+    "http-proxy-middleware": "^2.0.2",
     "netlify-cli": "^8.14.1",
+    "polka": "^0.5.2",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "sirv": "^2.0.2",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
